--- a/public/about.html
+++ b/public/about.html
@@ -1,18 +1,32 @@
-<h1>About Me</h1>
-<p>
-  Path of Exile is <a href="https://www.youtube.com/@TheVictor003">life</a>. (send help)
-</p>
-<p>
-  <ol>
-    <li>Install <a href="https://www.pathofexile.com/download">Path of Exile</a>.</li>
-    <li>Build Toxic Rain Pathfinder.</li>
-    <li>???</li>
-    <li>Profit.</li>
-  </ol>
-</p>
-<p>
-  Also, you can find my credit card info <a href="https://youtu.be/dQw4w9WgXcQ?si=yHj7vMr_L6SjZ2Vf">here</a>.
-</p>
-<p>
-  <a href="../index.html">Go back.</a>
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>About Me</h1>
+  <p>
+    Path of Exile is <a href="https://www.youtube.com/@TheVictor003">life</a>. (send help)
+  </p>
+  <p>
+    <ol>
+      <li>Install <a href="https://www.pathofexile.com/download">Path of Exile</a>.</li>
+      <li>Build Toxic Rain Pathfinder.</li>
+      <li>???</li>
+      <li>Profit.</li>
+    </ol>
+  </p>
+  <p>
+    Also, you can find my credit card info <a href="https://youtu.be/dQw4w9WgXcQ?si=yHj7vMr_L6SjZ2Vf">here</a>.
+  </p>
+  <p>
+    <a href="../index.html">Go back.</a>
+  </p>
+</body>
+<footer>
+  <p>© 2024 Victor</p>
+</footer>
+</html>
+
